refactor(gameobject): changed gameobject array to vector

--- a/SFML.vcxproj.filters
+++ b/SFML.vcxproj.filters
@@ -43,5 +43,8 @@
     <ClInclude Include="ShurikenClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
