--- a/SFML.vcxproj.filters
+++ b/SFML.vcxproj.filters
@@ -46,5 +46,8 @@
     <ClInclude Include="EnemyClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
